--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,18 +1,19 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: gitea
-secretGenerator:
-- literals:
-  - pg_password=some1pass5here9
-  name: gitea-secrets
-generatorOptions:
-  disableNameSuffixHash: true
-  labels:
-    type: generated
+# secretGenerator:
+# - literals:
+#   - pg_password=some1pass5here9
+#   name: gitea-secrets
+# generatorOptions:
+#   disableNameSuffixHash: true
+#   labels:
+#     type: generated
 resources:
 - namespace.yaml
+- secrets.yaml
 - storage.yaml
 - configuration.yaml
-- deployment.yaml
-- service.yaml
-- ingress.yaml
+# - deployment.yaml
+# - service.yaml
+# - ingress.yaml
