--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
 - secrets.yaml
 - storage.yaml
 - configuration.yaml
+- postgres-deployment.yaml
 # - deployment.yaml
 # - service.yaml
 # - ingress.yaml
