--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -15,6 +15,8 @@ resources:
 - storage.yaml
 - configuration.yaml
 - postgres-deployment.yaml
+- postgres-service.yaml
 - gitea-deployment.yaml
+- gitea-service.yaml
 # - service.yaml
 # - ingress.yaml
