Switch to flux-friendly pv/pvc

--- a/gitea-pvc.yaml
+++ b/gitea-pvc.yaml
@@ -7,8 +7,10 @@
     labels:
       app: gitea
   spec:
+    storageClassName: "local-path"
     accessModes:
       - ReadWriteOnce
     resources:
       requests:
         storage: 5Gi
+    volumeName: gitea-pv
