--- a/postgres-pvc.yaml
+++ b/postgres-pvc.yaml
@@ -7,8 +7,10 @@ metadata:
   labels:
     app: gitea
 spec:
+  storageClassName: "local-path"
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 5Gi
+  volumeName: postgres-pv
