--- a/gitea-pv.yaml
+++ b/gitea-pv.yaml
@@ -7,6 +7,7 @@
     labels:
       app: gitea
   spec:
+    storageClassName: "local-path"
     capacity:
       storage: 5Gi
     accessModes:
@@ -17,6 +18,5 @@
     nfs:
       server: 10.0.96.2
       path: "/volume1/storage/git-repo"
-    claimRef:
-      namespace: gitea
-      name: gitea-pvc
+
+
