--- a/postgres-pv.yaml
+++ b/postgres-pv.yaml
@@ -7,6 +7,7 @@
     labels:
       app: gitea
   spec:
+    storageClassName: "local-path"
     capacity:
       storage: 5Gi
     accessModes:
@@ -17,6 +18,3 @@
     nfs:
       server: 10.0.96.2
       path: "/volume1/storage/git-database"
-    claimRef:
-      namespace: gitea
-      name: postgres-pvc
