Begin migration to new storage

--- a/gitea-deployment.yaml
+++ b/gitea-deployment.yaml
@@ -44,7 +44,12 @@ spec:
         volumeMounts:
         - name: gitea-persistent-storage
           mountPath: /data
+        - name: gitea-storage-nfs
+          mountPath: /data.new
       volumes:
       - name: gitea-persistent-storage
         persistentVolumeClaim:
           claimName: gitea-pvc
+      - name: gitea-storage-nfs
+        persistentVolumeClaim:
+          claimName: gitea-storage-nfs
