--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,14 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: postgres-config
-  namespace: gitea
-  labels:
-    app: postgres
-data:
-  PGDATA: "/var/lib/postgresql/data"
-  POSTGRES_DB: "gitea"
-  POSTGRES_USER: "postgres"
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -23,7 +12,7 @@ data:
   USER_GID: "1000"
   ROOT_URL: "https://git.thejimnicholson.com"
   HTTP_PORT: "3000"
-  DB_TYPE: postgres
-  DB_HOST: postgres.gitea.svc.cluster.local:5432
-  DB_NAME: gitea
+  GITEA__database__DB_TYPE: postgres
+  GITEA__database__HOST: gitea-db-rw:5432
+  GITEA__database__NAME: gitea-db
 
