Remove old pvcs

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -12,15 +12,9 @@ generatorOptions:
     type: generated
 resources:
 - namespace.yaml
-# - secrets.yaml
-- postgres-pv.yaml
-- postgres-pvc.yaml
-- gitea-pv.yaml
-- gitea-pvc.yaml
-- 0x-storage.yaml
+- 01-postgresql.yaml
+- 02-storage.yaml
 - configuration.yaml
-- postgres-deployment.yaml
-- postgres-service.yaml
 - gitea-deployment.yaml
 - gitea-service.yaml
 - ingress.yaml
